--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 html, body {
 	font-size: 18px;
 	margin: 0;
@@ -28,6 +27,18 @@ p, span {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+}
+
+.other {
+	display: inline-block;
+	border: 1px solid #898989;
+	color: red;
+	margin: 1em;
+	border-radius: 3px;
+}
+
+.other * {
+	vertical-align: middle;
 }
 
 @media screen and (max-width: 600px) {
