--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,16 @@
 @import url(http://fonts.googleapis.com/css?family=Calligraffitti);
 
+@font-face {
+  font-family: 'fontello';
+  src: url('font/fontello.eot?11966964');
+  src: url('font/fontello.eot?11966964#iefix') format('embedded-opentype'),
+       url('font/fontello.woff?11966964') format('woff'),
+       url('font/fontello.ttf?11966964') format('truetype'),
+       url('font/fontello.svg?11966964#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html,
 button,
 input,
@@ -127,7 +138,7 @@ h3, h4 {
     min-height: 17.5em;
 }
 .btn{
-    position: relative; 
+    position: relative;
     margin-top: .4em;
     width: 5em;
     height: 2em;
@@ -181,6 +192,15 @@ h3, h4 {
     border-radius: 2px;
     padding: 1px;
 }
+.contact {
+    display: inline-block;
+    position: relative;
+    margin: 1.5em auto 0;
+    left: -.4em;
+}
+.contact a {
+    padding: .2em 0 0 .4em;
+}
 .copyright {
     margin-right: .4em;
 }
@@ -199,7 +219,7 @@ h3, h4 {
 .example-tryit p {
     position: absolute;
     margin: auto;
-    left: 34%;
+    left: 32%;
     right: 0;
     bottom: 0;
     top: 36%;
@@ -213,20 +233,17 @@ h3, h4 {
     width: 531px;
 }
 .ftr-main {
+    position: relative;
     height: 5em;
-    margin: 0;
-    margin-bottom: -5px;
-    padding: 0;
-    bottom: 0;
+    bottom: -2em;
     border-bottom: 3px solid #D6CB55;
     text-align: center;
 }
 .ftr-main p {
-    display: inline;
     position: relative;
     margin: 0 auto;
     padding: 0;
-    top: 4.8em;
+    top: 1.1em;
     font-size: .7em;
     line-height: 1.1em;
 }
@@ -348,6 +365,10 @@ h3, h4 {
 .section-subhead {
     font-size: 1.25em;
 }
+
+/*
+ * Social Media Buttons
+ */
 .social {
     position: relative;
     margin: 3em auto;
@@ -370,6 +391,46 @@ h3, h4 {
 .linkdin {
     left: 2em;
 }
+
+/*
+ * Contact Icons
+ */
+  [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-paper-plane:before { content: '\e800'; } /* '' */
+.icon-twitter:before { content: '\e801'; } /* '' */
+.icon-github:before { content: '\e804'; } /* '' */
+.icon-googleplus:before { content: '\e802'; } /* '' */
+.icon-linkedin:before { content: '\e803'; } /* '' */
 /* ==========================================================================
    Helper classes
    ========================================================================== */
